2021-09-18 (1.15.3.x)   * Bei Zeitraumverschiebungen von verbundenen ResInfos (connectionid > 0) wird ein evtl. vorhandener nachfolgender mit angepasst (also der Start wird dann nahtlos an das Ende der Vorgängers gesetzt).   * Vorgänge überarbeitet und vereinfacht   * Fehler in PnlTemplate korrigiert und vereinfacht   * typo in aussch01.xml korrigiert   * PnlMoveResinfo neu erstellt.   * Fehler in Controlling gefixt (BMI und Sturzindikatoren)